# bus_pending

./: .gitignore  LICENSE  README.md  acs.py  acs_codes.txt  acs_key.py  app.py  maps.py  pyproject.toml  schedule.sh  scrape_schedules.py  test.csv  trial.ipynb
bus_pending/: __main__.py  schedule.sh
bus_pending/analysis/: README.md  analysis.py  analyze_real_data.py  compare_schedule_real_data.py  do_analysis.py
bus_pending/app/: app.py  trips_trails.html
bus_pending/cleaning/: README copy.md  clean.py  error_summary_for_cleaning.py
bus_pending/data/: instructions.md
bus_pending/scraping/: __main__.py  create_test_data.py  make_db.py  scrape_buses.py  scrape_routes.py  scrape_schedules.py
bus_pending/visualizations/: acs.py  acs_codes.txt  animations_pydeck.ipynb  maps.py  path_layer.html  plotly_maps.py  preprocessing_for_plotly.py  preprocessing_for_pydeck.py  pydeck_maps.py  scatterplot_layer.html  trips.html  trips_layer.html
cleaning/: clean.py
report/: 00_report.Rmd  header.tex  proj-paper.Rmd
scraping/: __main__.py  create_test_data.py  make_db.py  scrape.py  scrape_buses.py  scrape_routes.py  scrape_schedules.py
tests/: test_analysis_real_data.py  test_analyze_schedule.py
visualizations/: app.py  deck_app.py  journal.md  please.html  routes.txt  run_app.txt
visualizations/acs_data/: acs_income_zipcodes_2019.csv  acs_income_zipcodes_2021.csv
visualizations/geodata/: Boundaries - Community Areas (current).geojson:Zone.Identifier  Boundaries - Neighborhoods.geojson:Zone.Identifier  Boundaries - ZIP Codes.geojson:Zone.Identifier  (+7 more)
(+21 files in other folders)
