[tool.poetry]
name = "bus-pending"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.26.3"
pandas = "^2.2.0"
lxml = "^5.1.0"
requests = "^2.31.0"
plotly-express = "^0.4.1"
geopandas = "^0.14.2"
dash = "^2.15.0"
skimpy = "^0.0.14"
pyogrio = "^0.7.2"
fiona = "^1.9.5"
fsspec = "^2024.2.0"
pydeck = "^0.8.0"
dash-deck = "^0.0.1"
dash-bootstrap-components = "^1.5.0"
dash-bootstrap-templates = "^1.1.2"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
